[tool.poetry]
name = "simple-uptime"
version = "1.0.0"
description = "A pinger for keeping your projects up"
authors = ["Navaneeth K M <navaneethkm004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replitdb = "^0.0.10"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
